--- a/todo.org
+++ b/todo.org
@@ -1,12 +1,7 @@
-* add bool cx.mark(int max_ns = -1)/sweep(int max_ns = -1) fns
-** get cidk timer
-** return true if all vals processed
-** add cx.marked_vals, cx.unmarked_vals
-** start mark by moving vals to unmarked_vals
-** add val.mark fn
-*** move to marked_vals
-** process unmarked_vals in sweep
-** mark all envs/stacks
+* bypass Pool alloc unless USE_POOL
+** put const in forthy2.hpp
+** check cidk history
+* --
 * add reader
 ** use .: for dup, :. for drop and :: for swap
 ** read () and {} as separate tokens
