--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,9 @@
+* add bind op
+** /ops
+** add Op base class like Val
+** link using Node for easy transformation
+** take id val on stack
+** use for method/const macros
 * add reader
 ** use .: for dup, :. for drop and :: for swap
 ** read () and {} as separate tokens
@@ -11,9 +17,6 @@
 ** 1,2
 * add Meta type
 * add type.derive/is_a
-* add /ops
-** add Op base class like Val
-** link using Node for easy transformation
 * add generic dispatch
 ** add call op
 ** add dispatch op
