--- a/todo.org
+++ b/todo.org
@@ -1,7 +1,13 @@
+* add Meta type
+** add libs/abc.hpp/init_abc
+*** bind cx types
+*** call from main
+* add env.bind_macro(args...)
+* ---
+* add method/const macros
 * add reader
 ** use .: for dup, :. for drop and :: for swap
 ** read () and {} as separate tokens
-* add method/const macros
 * add quote
 ** '(1 2 3) 'foo
 ** handle in reader
@@ -10,7 +16,6 @@
 ** parse suffix as separate stack/expr
 * add pair literals
 ** 1,2
-* add Meta type
 * add type.derive/is_a
 * add generic dispatch
 ** add call op
