--- a/todo.org
+++ b/todo.org
@@ -1,9 +1,15 @@
-* add |-support in reader
-** break read_id on |
-** add bool Form.eval(false)
-** set eval = true on next form
-** expand if macro
-** otherwise eval on separate stack & replace with push
+* finish |-support
+** if IdForm.cte
+*** expand macros
+**** add call op
+***** get method from stack
+**** add Macro.expand()
+**** add Macro.method
+***** wrap macro imp in method
+***** call if not cte
+*** eval on compile stack in Form.compile
+*** wrap separate stack around cx.compile
+**** delegate if cte in id/lit/pair
 * --
 * add else macro
 * add method macro
