--- a/todo.org
+++ b/todo.org
@@ -3,6 +3,8 @@
 ** print pairs as 'a b,'
 ** add method
 ** add pair tests
+* change dup/drop/swap to macros
+** add ops
 * add scope support for ;
 ** compile as separate scope
 * inherit macro from method
