--- a/todo.org
+++ b/todo.org
@@ -16,6 +16,8 @@
 * add method macro
 ** clone env on compile
 ** compile body with_env on first use
+* add clock macro/op
+** pop reps from stack
 * add stack literals
 ** (1 2 3; 4 5)
 ** parse suffix as separate stack
