--- a/todo.org
+++ b/todo.org
@@ -17,9 +17,8 @@
 ** (1 2 3; 4 5)
 ** parse suffix as separate stack
 * --
-* add CallOp.check_applicable
-** default false
-** emit with first method call if len(set) == 1
+* add CallMethodOp
+** emit with first method if len(set) == 1
 ** throw error unless Method.applicable()
 * add MethodSet.nargs
 ** add constructor arg
