--- a/todo.org
+++ b/todo.org
@@ -2,7 +2,8 @@
 ** compile body with_env
 ** init Method.fn
 ** finish Method.call()
-* fib_rec
+* rewrite fib_rec-if using literal method args
+* --
 * add MethodSet.nargs
 ** add constructor arg
 ** add test in add_method
@@ -12,11 +13,15 @@
 * add static array of Int vals
 ** add MAX_FAST_INT
 * --
-* add fix point readme
-* add return-call method
+* add recall method
 ** goto beg_pc
 ** optional arg for target
 *** update cx.call.beg_pc if specified
+* add fib_tail
+* --
+* add fib_iter
+* --
+* add fix point readme
 * add next-method fun
 ** search call-chain for method call
 *** return next from method.set
