--- a/todo.org
+++ b/todo.org
@@ -1,8 +1,15 @@
-* add method macro
-** compile body with_env
-** init Method.fn
-** finish Method.call()
+* add bench/fib_rec.py
 * rewrite fib_rec-if using literal method args
+* commit
+* --
+* add Time type
+** chrono::duration<double, nano>
+** use in Timer
+** return from clock-macro
+** take as arg in mark-/sweep
+** add time lib
+*** add h/m/s/ms/us/ns accessors
+*** add +/-
 * --
 * add MethodSet.nargs
 ** add constructor arg
@@ -23,7 +30,7 @@
 * --
 * add fix point readme
 * add next-method fun
-** search call-chain for method call
+** search call chain for method call
 *** return next from method.set
 **** _ if missing
 * add |-support for values
