--- a/todo.org
+++ b/todo.org
@@ -1,15 +1,7 @@
 * add bench/fib_rec.py
 * rewrite fib_rec-if using literal method args
+** update readme
 * commit
-* --
-* add Time type
-** chrono::duration<double, nano>
-** use in Timer
-** return from clock-macro
-** take as arg in mark-/sweep
-** add time lib
-*** add h/m/s/ms/us/ns accessors
-*** add +/-
 * --
 * add MethodSet.nargs
 ** add constructor arg
@@ -27,6 +19,15 @@
 * add fib_tail
 * --
 * add fib_iter
+* --
+* add Time type
+** chrono::duration<double, nano>
+** use in Timer
+** return from clock-macro
+** take as arg in mark-/sweep
+** add time lib
+*** add h/m/s/ms/us/ns accessors
+*** add +/-
 * --
 * add fix point readme
 * add next-method fun
